Controllers y Vistas Actualizadas

--- a/ArbolesPlantas/ArbolesPlantas/Views/DetalleProductoes/Details.cshtml
+++ b/ArbolesPlantas/ArbolesPlantas/Views/DetalleProductoes/Details.cshtml
@@ -59,6 +59,21 @@
             @Html.DisplayFor(model => model.Productos.nombre)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.razon)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.razon)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.porcentajeDescuento)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.porcentajeDescuento)
+        </dd>
     </dl>
 </div>
 <p>
