--- a/ArbolesPlantas/ArbolesPlantas/Views/DetalleProductoes/FinanzasProductos.cshtml
+++ b/ArbolesPlantas/ArbolesPlantas/Views/DetalleProductoes/FinanzasProductos.cshtml
@@ -5,38 +5,49 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Actualizar de Precio de Venta Productos</h2>
+<h2 class="badge-light text-center">Solicitudes de cambio de precio por necesidad económica</h2>
 
-<table class="table">
+<br>
+<table class="table table-striped alert-success" id="myTable">
+    <thead class="thead-light">
+        <tr>
+            <th>
+                @Html.DisplayName("# Solicitud")
+            </th>
+            <th>
+                @Html.DisplayName("Producto")
+            </th>
+            <th>
+                @Html.DisplayName("Fecha de Alta")
+            </th>
+            <th>
+                @Html.DisplayName("Precio Actual")
+            </th>
+            <th>
+                @Html.DisplayName("Descuento %")
+            </th>
+            <th>
+                @Html.DisplayName("Precio Solicitado")
+            </th>
+            <th style="text-align:center">
+                @Html.DisplayName("Razón")
+            </th>
+            <th style="text-align:center">
+                @Html.DisplayName("Status")
+            </th>
+
+            <th style="text-align:center">
+                @Html.DisplayName("Acciones")
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+        @foreach (var item in Model)
+        {
     <tr>
-        <th>
-            @Html.DisplayName("Producto")
-        </th>
-        <th>
-            @Html.DisplayName("Fecha de Alta")
-        </th>
-        <th>
-            @Html.DisplayName("Área que solicita")
-        </th>
-        <th>
-            @Html.DisplayName("Precio Anterior")
-        </th>
-        <th>
-            @Html.DisplayName("Precio Nuevo")
-        </th>
-        <th>
-            @Html.DisplayName("Status")
-        </th>
-
-        <th>
-            @Html.DisplayName("Acciones")
-        </th>
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
-    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Id)
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.Productos.nombre)
         </td>
@@ -44,13 +55,16 @@
             @Convert.ToString(string.Format("{0:dd/MM/yyyy}", item.fechaAlta))
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.areaSolicita)
-        </td>
-        <td>
             @Convert.ToDecimal(item.precio_anterior).ToString("#,##0.00")
         </td>
         <td>
+            @Html.DisplayFor(modelItem => item.porcentajeDescuento)
+        </td>
+        <td>
             @Convert.ToDecimal(item.precio_nuevo).ToString("#,##0.00")
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.razon)
         </td>
         <td>
             @switch (item.status)
@@ -72,10 +86,11 @@
             @Html.ActionLink("Rechazar", "RechazarStatus", new { id = item.Id })
         </td>
     </tr>
-    }
+        }
 
 </table>
 <br />
 <button class="alert-info">
     @Html.ActionLink(" Ver Historial Productos", "HistorialProductos")
 </button>
+
